--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
-  
+
   <!-- FONTS -->
   <link rel="stylesheet" href="https://use.typekit.net/tiw4wou.css">
   <title>Bootstrap Assignment</title>
@@ -15,75 +15,109 @@
 
 <body>
   <!DOCTYPE html>
+
   <!-- main body -->
-  <div class="main">
-    
-    <div class="div">
+  <main>
 
-      <!-- SIDEBAR -->
-      <!-- LOGO -->
-      <div class="sidebar-desktop">
-        <div class="logo">
-          <div id="circle"></div>
-          <div id="D"></div>
-        </div>
-        <!-- TITLE -->
-        <div class="title_D">Dashboard Kit</div>
-
-        <!-- LIST -->
-        <ul class="sidebar-list">
-          <li id="active"><img src="assets/images/ICON_1.png" class="li_img">
-            Overview
-          </li>
-          <li><img src="assets/images/ICON_2.png" class="li_img">
-            Tickets
-          </li>
-          <li><img src="assets/images/ICON_3.png" class="li_img">
-            Ideas
-          </li>
-          <li><img src="assets/images/ICON_4.png" class="li_img">
-            Contacts
-          </li>
-          <li><img src="assets/images/ICON_5.png" class="li_img">
-            Agents
-          </li>
-          <li><img src="assets/images/ICON_6.png" class="li_img">
-            Articles
-          </li>
-          <!-- divisor -->
-          <div id="div_R"></div>
-          <li><img src="assets/images/ICON_7.png" class="li_img">
-            Settings
-          </li>
-          <li><img src="assets/images/ICON_8.png" class="li_img">
-            Subscription
-          </li>
-        </ul>
-      </div>
-
-      <!-- HEADER -->
-      <div class="overlap">
-        <div class="header-default">
-          <div class="title_1">
-            Overview
-            <img id="icon-search" src="assets/images/ICON_9.png" alt="">
-            <img class="vector" src="assets/images/ICON_10.png" />
-            <img class="photo" src="assets/images/P.png" />
-          </div>
-          <div class="name">Jones Ferdinand</div>
-          <div class="photo"></div>
-        </div>
-
+    <!-- SIDEBAR FIXED (SUBHEADER) -->
+    <div class="sidebar-desktop">
+      <!-- LOGO BRAND -->
+      <div class="logo">
+        <!-- logo icon -->
+        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="16" cy="16" r="16" fill="#3751FF" />
+          <path
+            d="M11 10C11 9.44772 11.4477 9 12 9H15.9905C18.2127 9 19.9333 9.60955 21.1524 10.8287C22.3841 12.0478 23 13.765 23 15.9803C23 18.2088 22.3841 19.9391 21.1524 21.1713C19.9333 22.3904 18.2127 23 15.9905 23H12C11.4477 23 11 22.5523 11 22V10Z"
+            fill="url(#paint0_linear_584_285)" />
+          <defs>
+            <linearGradient id="paint0_linear_584_285" x1="11" y1="9" x2="23" y2="23" gradientUnits="userSpaceOnUse">
+              <stop stop-color="white" stop-opacity="0.7" />
+              <stop offset="1" stop-color="white" />
+            </linearGradient>
+          </defs>
+        </svg>
 
       </div>
+      <!-- TITLE -->
+      <div class="title_D">Dashboard Kit</div>
 
+      <!-- LIST -->
+      <ul class="sidebar-list">
+        <li id="active"><img src="assets/images/ICON_1.png" class="li_img">
+          Overview
+        </li>
+        <li><img src="assets/images/ICON_2.png" class="li_img">
+          Tickets
+        </li>
+        <li><img src="assets/images/ICON_3.png" class="li_img">
+          Ideas
+        </li>
+        <li><img src="assets/images/ICON_4.png" class="li_img">
+          Contacts
+        </li>
+        <li><img src="assets/images/ICON_5.png" class="li_img">
+          Agents
+        </li>
+        <li><img src="assets/images/ICON_6.png" class="li_img">
+          Articles
+        </li>
+        <!-- divisor -->
+        <div id="div_R"></div>
+        <li><img src="assets/images/ICON_7.png" class="li_img">
+          Settings
+        </li>
+        <li><img src="assets/images/ICON_8.png" class="li_img">
+          Subscription
+        </li>
+      </ul>
     </div>
 
+    <!-- section page -->
+    <section class="main-page">
 
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      <!-- HEADER PAGE -->
+      <div class="header-default">
+        <div class="title_1">Overview</div>
+        <div class="subheader-icons">
+          <!-- icon search -->
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="6.5" cy="6.5" r="5.75" stroke="#C5C7CD" stroke-width="1.5" />
+            <path d="M11 11L15 15" stroke="#C5C7CD" stroke-width="1.5" stroke-linecap="round" />
+          </svg>
+          <!-- icon notification -->
+          <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M7.99999 19C9.10374 19 9.99905 18.1047 9.99905 17H6.00093C6.00093 18.1047 6.89624 19 7.99999 19ZM14.7309 14.3216C14.1272 13.6728 12.9975 12.6969 12.9975 9.5C12.9975 7.07188 11.295 5.12812 8.99937 4.65125V4C8.99937 3.44781 8.55187 3 7.99999 3C7.44812 3 7.00062 3.44781 7.00062 4V4.65125C4.70499 5.12812 3.00249 7.07188 3.00249 9.5C3.00249 12.6969 1.8728 13.6728 1.26905 14.3216C1.08155 14.5231 0.998429 14.7641 0.999991 15C1.00343 15.5125 1.40562 16 2.00312 16H13.9969C14.5944 16 14.9969 15.5125 15 15C15.0016 14.7641 14.9184 14.5228 14.7309 14.3216Z"
+              fill="#C5C7CD" />
+            <circle cx="13" cy="5" r="3.75" fill="#3751FF" stroke="#F7F8FC" stroke-width="1.5" />
+          </svg>
+          <!-- svg divider line -->
+          <svg width="2" height="32" viewBox="0 0 2 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 0V32" stroke="#DFE0EB" />
+          </svg>
+          <!-- name and picture profile -->
+          <div class="name">Jones Ferdinand</div>
+          <img class="photo" src="assets/images/P.png" />
+        </div>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+    </section>
+  </main>
+
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
