--- a/Public/index.html
+++ b/Public/index.html
@@ -165,6 +165,48 @@
       </div>
 
       <!-- Section Cards -->
+      <div class="row">
+        <!-- card 1 -->
+        <div class="col-sm-3 mb-3 mb-sm-0">
+          <div class="card" style="border-radius: 8px; height: 180px;">
+            <div class="card-body">
+              <h5 class="card-title">Unresolved</h5>
+              <p class="card-text">60</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 2 -->
+        <div class="col-sm-3 mb-3 mb-sm-0">
+          <!-- hover border active -->
+          <div class="card" style="border: 1px solid #3751FF; border-radius: 8px; height: 180px;">
+            <div class="card-body">
+              <h5 class="card-title active-hover">Overdue</h5>
+              <p class="card-text active-hover">16</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 3 -->
+        <div class="col-sm-3 mb-3 mb-sm-0">
+          <div class="card" style="border-radius: 8px; height: 180px;">
+            <div class="card-body">
+              <h5 class="card-title">Open</h5>
+              <p class="card-text">43</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 4 -->
+        <div class="col-sm-3 mb-3 mb-sm-0">
+          <div class="card" style="border-radius: 8px; height: 180px;">
+            <div class="card-body">
+              <h5 class="card-title">On hold</h5>
+              <p class="card-text">64</p>
+            </div>
+          </div>
+        </div>
+      </div>
       
 
 
