cards section updated

--- a/Public/index.html
+++ b/Public/index.html
@@ -163,7 +163,7 @@
       <!-- section cards -->
       <div class="row">
         <!-- card 1 -->
-        <div class="col-sm-2 mb-3 mb-sm-0" style="padding: 0;">
+        <div class="col-3 mb-3 mb-sm-0" style="padding: 0;">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Unresolved</h5>
@@ -173,7 +173,7 @@
         </div>
 
         <!-- card 2 -->
-        <div class="col-sm-2 mb-3 mb-sm-0" style="padding: 0;">
+        <div class="col-3 mb-3 mb-sm-0" style="padding: 0;">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Overdue</h5>
@@ -183,7 +183,7 @@
         </div>
 
         <!-- card 3 -->
-        <div class="col-sm-2 mb-3 mb-sm-0" style="padding: 0;">
+        <div class="col-3 mb-3 mb-sm-0" style="padding: 0;">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Open</h5>
@@ -193,7 +193,7 @@
         </div>
 
         <!-- card 4 -->
-        <div class="col-sm-2 mb-3 mb-sm-0" style="padding: 0;">
+        <div class="col-3 mb-3 mb-sm-0" style="padding: 0;">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">On hold</h5>
@@ -243,7 +243,7 @@
             </div>
 
             <!-- graphic image -->
-            <svg width="686" height="380" viewBox="0 0 686 380" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="graphic-image" width="686" height="380" viewBox="0 0 686 380" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_584_115)">
                 <path d="M0 355H686" stroke="#EBEDF0" />
                 <path d="M0 299H686" stroke="#EBEDF0" />
