Tasks hovers updated

--- a/Public/index.html
+++ b/Public/index.html
@@ -527,8 +527,8 @@
             <!-- tasks -->
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <div class="task-input">
-                <input id="urgent" type="radio" name="contact">
-                Finish ticket update
+                <input type="checkbox" class="form-check-input" id="finish-ticket-update">
+                <label class="form-check-label" for="finish-ticket-update">Finish ticket update</label>
               </div>
               <button id="hover-roundedbutton-1" class="rounded-pill"
                 style="background-color: #fec400; min-width: 100px; ">urgent</button>
@@ -536,8 +536,8 @@
 
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <div class="task-input">
-                <input id="new" type="radio" name="contact">
-                Create new ticket example
+                <input type="checkbox" class="form-check-input" id="create-new-ticket">
+                <label class="form-check-label" for="create-new-ticket">Create new ticket example</label>
               </div>
               <button id="hover-roundedbutton-2" class="rounded-pill"
                 style="background-color: #29cc97; min-width: 100px;">new</button>
@@ -545,11 +545,11 @@
 
             <li class="list-group-item d-flex justify-content-between align-items-center" style="border: none;">
               <div class="task-input">
-                <input id="default" type="radio" name="contact">
-                Update ticket report
+                <input type="checkbox" class="form-check-input" id="update-ticket-report">
+                <label class="form-check-label" for="update-ticket-report">Update ticket report</label>
               </div>
               <button id="hover-roundedbutton-3" class="rounded-pill"
-                style="background-color: #f0f1f7; min-width: 100px; color: #9fa2b4;">urgent</button>
+                style="background-color: #f0f1f7; min-width: 100px; color: #9fa2b4;">default</button>
             </li>
           </ul>
         </div>
